Fixed Search button on mobile

--- a/client/src/components/SearchPage/Search/Search.css
+++ b/client/src/components/SearchPage/Search/Search.css
@@ -1,15 +1,20 @@
 .has-search .form-control {
-	padding-left: 2.375rem;
+  padding-left: 2.375rem;
 }
 
 .has-search .form-control-feedback {
-	position: absolute;
-	z-index: 2;
-	display: block;
-	width: 2.375rem;
-	height: 2.375rem;
-	line-height: 2.375rem;
-	text-align: center;
-	pointer-events: none;
-	color: #aaa;
+  position: absolute;
+  z-index: 2;
+  display: block;
+  width: 2.375rem;
+  height: 2.375rem;
+  line-height: 2.375rem;
+  text-align: center;
+  pointer-events: none;
+  color: #aaa;
+}
+
+.dropdown-toggle,
+.dropdown-menu {
+  width: 100%;
 }
